{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "ce6a07e0-ad6d-4a26-b413-bc68e541b1df",
            "actions": [
                {
                    "name": "PrimaryContract",
                    "type": "PassThrough",
                    "id": "5adea40b-7d19-4602-8547-16724bdf21ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "d23bbf1d-dd02-4e6b-b324-ec5d6254cda4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "99831cd5-3a2e-47bd-8cbe-4e276a2c51bc",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6355f447-08d9-48bf-ab03-d5bf8a82c067",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}